@@ -660,3 +660,10 @@
           rotation on the image object 3) Corresponding image 
           object has alpha disabled.
 
+2012-01-23  Tom Hacohen (TAsn)
+
+	* Textblock: Added evas_object_textblock_style_user_set/get.
+	This is used to override the default style set for an evas object.
+	For example, this can be used to nicely change the font and size
+	in a text editor.
+
